--- a/public/index.html
+++ b/public/index.html
@@ -2,89 +2,33 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="O MAGO DOS FRETES oferece soluções logísticas eficientes com uma frota de mais de 1.000 veículos em todo o Brasil."
+      content="O Mago dos Fretes oferece soluções logísticas eficientes com uma frota de mais de 1.000 veículos em todo o Brasil."
     />
-    <link
-      rel="apple-touch-icon"
-      sizes="57x57"
-      href="%PUBLIC_URL%/apple-icon-57x57.png"
+    <meta property="og:title" content="MAGO DOS FRETES" />
+    <meta
+      property="og:description"
+      content="O Mago dos Fretes oferece soluções logísticas eficientes com uma frota de mais de 1.000 veículos em todo o Brasil."
     />
-    <link
-      rel="apple-touch-icon"
-      sizes="60x60"
-      href="%PUBLIC_URL%/apple-icon-60x60.png"
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:url" content="https://seusite.com.br" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="MAGO DOS FRETES" />
+    <meta
+      name="twitter:description"
+      content="O Mago dos Fretes oferece soluções logísticas eficientes com uma frota de mais de 1.000 veículos em todo o Brasil."
     />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="%PUBLIC_URL%/apple-icon-72x72.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="%PUBLIC_URL%/apple-icon-76x76.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="%PUBLIC_URL%/apple-icon-114x114.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="%PUBLIC_URL%/apple-icon-120x120.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="%PUBLIC_URL%/apple-icon-144x144.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="%PUBLIC_URL%/apple-icon-152x152.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="%PUBLIC_URL%/apple-icon-180x180.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="%PUBLIC_URL%/android-icon-192x192.png"
-    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="%PUBLIC_URL%/favicon-32x32.png"
     />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="%PUBLIC_URL%/favicon-96x96.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="%PUBLIC_URL%/favicon-16x16.png"
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta
-      name="msapplication-TileImage"
-      content="%PUBLIC_URL%/ms-icon-144x144.png"
-    />
-    <meta name="theme-color" content="#ffffff" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
