Atualiza metadados e caminhos de recursos no HTML

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,11 @@
       property="og:description"
       content="O Mago dos Fretes oferece soluções logísticas eficientes com uma frota de mais de 1.000 veículos em todo o Brasil."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
-    <meta property="og:url" content="https://seusite.com.br" />
+    <meta
+      property="og:image"
+      content="https://mago-dos-fretes.vercel.app/logo.png"
+    />
+    <meta property="og:url" content="https://mago-dos-fretes.vercel.app/" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="MAGO DOS FRETES" />
@@ -22,13 +25,11 @@
       name="twitter:description"
       content="O Mago dos Fretes oferece soluções logísticas eficientes com uma frota de mais de 1.000 veículos em todo o Brasil."
     />
-    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="%PUBLIC_URL%/favicon-32x32.png"
+    <meta
+      name="twitter:image"
+      content="https://mago-dos-fretes.vercel.app/logo.png"
     />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
